fixed wrong title alignment

--- a/assets/scss/templates/_menu.scss
+++ b/assets/scss/templates/_menu.scss
@@ -20,6 +20,19 @@
 
   .container {
     padding: 20px;
+    
+    @include desktop {
+      padding-right: 0;
+      padding-left: 0;
+    }
+    @include tablet {
+      padding-right: 0;
+      padding-left: 0;
+    }
+    @include mobile {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
   } 
 
   .navbar-nav .nav-link {
